fix(scrollbar): add variable to scrollbar scss

--- a/packages/core/src/mixins/_scrollbar.scss
+++ b/packages/core/src/mixins/_scrollbar.scss
@@ -2,6 +2,7 @@
   &:hover {
     &::-webkit-scrollbar-thumb {
       border: var(--tds-scrollbar-thumb-border-hover-width) solid transparent;
+      border-radius: var(--tds-scrollbar-hover-thumb-border-radius);
       background-clip: padding-box;
     }
   }
